# FastAPI

./: README.md  alembic.ini  ddr4.txt  main.py  pyproject.toml
migraions/versions/: 05b1de1d37e8_.py  12cfe5e5f0ad_add_user_role.py  3e3c2cd7bbe9_create_new_migrations.py  552fbcc0dc3b_upgrade.py  75e740f42c81_add_table_users.py  b7b65b39773d_init.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/migration/: env.py
src/migration/versions/: d2e253d9680b_init.py
src/repository/: description.txt  todos.py  users.py
src/routes/: auth.py  todos.py
src/schemas/: todo.py  user.py
src/services/: auth.py  roles.py
tm5/: saltpath.py  use_hash.py
tm5/l_functor/: check_time_functor.py  functor_learn.py  test_1.py  test_2.py  test_3.py
